--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -1,6 +1,10 @@
 
 Send global and part keyshifts through ring buffer (like global fine detune).
 
+Add NRPN capability to midi learn, and possibly re-learn.
+
+Temporarily make key aftertouch do channel aftertouch.
+
 Sort out direct access dynfilter->filter (and two enclosed controls). All work but don't update gui.
 
 LV2: internal sound banks do not appear to be exposed as LV2 presets
@@ -18,8 +22,7 @@ Change root/bank/instrument lists to single file for all instances.
 
 Make loading effect presets update the 'top' line.
 
-Startup state load doesn't set buffersize correctly - partially resolved.
-    size is ignored if loaded when already running (which is reasonable).
+Startup state load doesn't set buffersize correctly - partially resolved. Size is ignored if loaded when already running (which is reasonable).
 
 Allow headless compilation.
 
@@ -33,8 +36,7 @@ Make LFOs active on sounding notes. Not easy!
 
 Consider enabling and disabling tooltips.
 
-Make attempt to start second independent instance open a new one in running
-yoshimi instead - saves memory and more consistent.
+Make attempt to start second independent instance open a new one in running yoshimi instead - saves memory and more consistent.
 
 
 RPNs (channel based)
