--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 1.5.0 M
 
+2010-1-19 Will
+* brokenReset: removed 'UpdateConfig' from 'resetAll'
+  This seems to conflict with 'UpdateMaster'.
+* Clearing config tab 4 now integrated into
+  'update_master_ui' at GUI level.
+
 2017-1-18 Will
 * Temporarily made key pressure do channel pressure.
 * Made minor improvement to pitch wheel handling.
