--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.5.0 M
 
+2010-1-20 Will
+* brokenReset: CLI stop and reset now use direct access.
+* Improved CLIresolvethread flag system.
+* All master resets now handled via CLIresolvethread.
+
 2010-1-19 Will
 * brokenReset: removed 'UpdateConfig' from 'resetAll'
   This seems to conflict with 'UpdateMaster'.
