--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,8 @@ yoshimi 1.5.0 M
 * brokenReset: CLI stop and reset now use direct access.
 * Improved CLIresolvethread flag system.
 * All master resets now handled via CLIresolvethread.
+* Set up proper Init function for InterChange.cpp
+  Threads could fail to start if poor general init.
 
 2010-1-19 Will
 * brokenReset: removed 'UpdateConfig' from 'resetAll'
