--- a/Changelog
+++ b/Changelog
@@ -1,13 +1,18 @@
 yoshimi 1.5.0 M
 
-2010-1-20 Will
+2017-1-20 Will
+* master: pulled in corrections and upgrades from
+  (no longer) brokenReset :)
+* Corrected dates in this file!
+
+2017-1-20 Will
 * brokenReset: CLI stop and reset now use direct access.
 * Improved CLIresolvethread flag system.
 * All master resets now handled via CLIresolvethread.
 * Set up proper Init function for InterChange.cpp
   Threads could fail to start if poor general init.
 
-2010-1-19 Will
+2017-1-19 Will
 * brokenReset: removed 'UpdateConfig' from 'resetAll'
   This seems to conflict with 'UpdateMaster'.
 * Clearing config tab 4 now integrated into
