--- a/Changelog
+++ b/Changelog
@@ -6,6 +6,7 @@ yoshimi 1.5.0 M
 * Added instrument "Smooth Organ" to "Companion" set.
 * Added error checks for attempt to access kit when not
   in kit mode.
+* Reverted new error check - it was wrong :(
 
 2017-1-20 Will
 * master: pulled in corrections and upgrades from
