--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.0 M
 
+2017-1-26 Will
+* Modified splash screen creation utility and files and
+  made them formally available in a new 'Util' directory.
+
 2017-1-23 Will
 * Channel switcher/Solo now ignores zero in loop mode.
   It responds to an on/off pedal press but not release.
