--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.0 M
 
+2017-1-29 Will
+Bugfix: Some limits wrongly set for midi-learn.
+        Revised defaults settings.
+
 2017-1-28 Will
 * Merged in Jesper's edit button in AddSynth voice list.
 * Adjusted positions/sizes to match general style.
