Initial prep for midi-learn NRPNs

--- a/Changelog
+++ b/Changelog
@@ -1,9 +1,12 @@
 yoshimi 1.5.0 M
 
+2017 - 1 30 Will
+* Initial prep for midi-learn NRPNs :)
+
 2017-1-29 Will
-Bugfix: Some limits wrongly set for midi-learn.
-        Revised defaults settings.
-Bugfix: More wrong limits :(
+* Bugfix: Some limits wrongly set for midi-learn.
+          Revised defaults settings.
+* Bugfix: More wrong limits :(
 
 2017-1-28 Will
 * Merged in Jesper's edit button in AddSynth voice list.
