--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,12 @@
 yoshimi 1.5.0 M
 
+2017-2-9 Will.
+* Global and part keyshifts now go through ringbuffer.
+* Code tidy-ups and improved comments.
+* Bugfix: Part kitlist wasn't deactivated on start.
+* All sources now use ringbuffer to load patchsets.
+* Bugfix: Segfault if reset from CLI while GUI running.
+
 2017-2-8 Will
 * Commented out redundant code from LV2.
 * Added mlock to all ring buffers.
