--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,7 @@ yoshimi 1.5.0 M
 * Reverted unsafe changes from build 952.
 * Small optimisation in main audio loop partonoff read.
 * A few Gui tidy-ups.
+* Mixer as well as main window now show current patchset.
 
 2017-2-9 Will
 * Global and part keyshifts now go through ringbuffer.
