Separated out temporary Gui Write -> Read per section Improved Cli messaging

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.5.0 M
 
+2017-2-12 Will
+* Separated out temporary Gui Write -> Read per section.
+  This enables us to do conversions section by section.
+* Improved Cli messaging.
+
 2017-2-11 Will
 * Reverted unsafe changes from build 952.
 * Small optimisation in main audio loop partonoff read.
