--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,13 @@
 yoshimi 1.5.0 M
 
+2017-2-17 Will
+* Cli effect presets now numbered from 1.
+* Improved Cli listing of effects/presets.
+* Bugfix: Solo wasn't seeing 'Loop' when reloading.
+* Bugfix: Mute not cleared if patchset load failed.
+* Cli can load patchsets and vectors from list numbers.
+* Cli loading vectors updates the Gui.
+
 2017-2-16 Will
 * Improved readline behavour.
   Still needs more work - sometimes multiple prompt lines!
