--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 1.5.0 M
 
+2017-2-19 Will
+* Bugfix: Midi-learn wasn't reloading the correct ranges.
+* Found more Cli numbers to adjust :(
+* Started changing Cli *input* numbers to match Gui ones.
+* Got as far as 'commandPart'.
+
 2017-2-18 Will
 * Vectors now soft-load :)
 
