Corrected wrong attribution in changelog :(

--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,7 @@
 yoshimi 1.5.0 M
 
 2017-2-21 Will
-* Merged  in Jesper's latest tooltip additions.
+* Merged  in Jörn's latest tooltip additions.
 * Minor change to freemode Envelope text to remove overlaps.
 
 2017-2-20 Will
