Added ARM options to CMakeLists.txt Restored commented out AdNote cubic interpolation (disabled) Updated copyright notices and dates in various files

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 1.5.0 M
 
+2017-2-24 Will
+* Added ARM options to CMakeLists.txt
+* Restored commented out AdNote cubic interpolation
+  for future examination (currently would segfault).
+* Updated copyright notices and dates in various files.
+
 2017-2-23 Will
 *Merged in Rob's live LFO controls.
 
