Fixed instrument background colours

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.0 M
 
+2016-2-26 Will
+* Fixed instrument background colours.
+
 2017-2-24 Will
 * Added ARM options to CMakeLists.txt
 * Restored commented out AdNote cubic interpolation
