--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ yoshimi 1.5.0 M
 2016-3-3 Will
 * Changed confusing naming referring to voice list vibratto.
   Also improved comment.
+* Improved float/int and float/bool casts in interchange.
 
 2016-3-2 Will
 * Main part limits done (not controllers)
