--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -3,6 +3,8 @@ Make NRPN midi learn able to be re-learned.
 
 Sort out direct access dynfilter->filter (and two enclosed controls). All work but don't update gui.
 
+Direct access to envelope freemode not done :(
+
 LV2: internal sound banks do not appear to be exposed as LV2 presets
 
 Find out why LV2 only stores/retrieves patch sets (not state)
