--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,8 @@ yoshimi 1.5.0 M
 * Changed confusing naming referring to voice list vibratto.
   Also improved comment.
 * Improved float/int and float/bool casts in interchange.
+* Gui Addsynth base parameters now go through ring buffers.
+* Reinstated Addsynth base random pan button behaviour.
 
 2016-3-2 Will
 * Main part limits done (not controllers)
