--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,8 @@ yoshimi 1.5.0 M
 2017-3-11 Will
 * Splash timeout is longer and doesn't block user.
 * Fixed regression - exit was always claiming config changed.
+* Fixed regression - wrong font sizes in 'settings'.
+* BugFiX: Cli wasn't seeing value for freemode X offset.
 
 2017-3-10 Will
 * Monitoring incoming CCs switch now saved in config.
