--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -1,9 +1,9 @@
 
+Direct access to envelope not updating Gui graph and freemde not correctly registering with Gui, but seems to work correctly otherwise.
+
 Make NRPN midi learn able to be re-learned.
 
 Sort out direct access dynfilter->filter (and two enclosed controls). All work but don't update gui.
-
-Direct access to envelope freemode not done :(
 
 LV2: internal sound banks do not appear to be exposed as LV2 presets
 
