--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 1.5.0 M
 
+2017-3-16 Will
+*Bugfix: part volume was not being activated on load
+ but only if the saved value was 95! There was a similar
+ less important issue with panning.
+* Small optimisation in Gui freemode enable switch.
+
 2017-3-15 Will
 * Added correction from Jesper to tooltips code.
 * Direct access now enables envelope freemode in Gui
