--- a/Changelog
+++ b/Changelog
@@ -12,6 +12,7 @@ yoshimi 1.5.0 M
 * BugFix: Recent state loading failed
   due to missing lines in ParametersUI.fl
 * Small adjustments to messageing.
+* State reload now clears all parts before loading new ones.
 
 2017-3-16 Will
 * Bugfix: part volume was not being activated on load
