--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,14 @@
 yoshimi 1.5.1 rc1
 
+2017-3-19 Jesper
+* Bugfix: stored window positions were read with wrong buffer size
+* Visual: menu bar positioned left of window + overlap by frame beneath
+* Even alignment and distribution of widgets in MasterUI & PartUI
+  Exact centering required resizing effects windows by 1 pixel
+* Tooltip fixes in MasterUI and PartUI
+  one inconsistent description and some inconsistent capitalisation.
+* Renamed m-R-M to Set-R-Set and placed the buttons next to their spinners
+
 2017-3-19 Will
 * Bugfix: Rotary controls were making pairs of calls.
 * Installed new splash screen and updated notices.
