Reverted button style changes and relative positions, "Controllers" button realigned Aligned on width of labels above it, as before. Some minor nudges of widgets.

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.5.1 rc1
 
+2017-3-20
+* Reverted min/max button style and relative positions
+* Reverted mistakes: wrong tab selected, perceptual spinner size
+  and moved button grid one pixel down to huge effect.
+
 2017-3-19 Jesper
 * Bugfix: stored window positions were read with wrong buffer size
 * Visual: menu bar positioned left of window + overlap by frame beneath
