--- a/Changelog
+++ b/Changelog
@@ -1,9 +1,10 @@
-yoshimi 1.5.1 rc1
+yoshimi 1.5.1 rc2
 
 2017-3-20 Will
 * Bugfix: setExtension got one case wrong.
 * Bugfix: State load wasn't setting partmaps.
 * Small adjstment to Insertion Effects tab.
+* Set master as 1.5.1 rc2
 
 2017-3-20 Jesper
 * Reverted min/max button style and relative positions
