--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,10 @@
-yoshimi 1.5.1 rc4
+yoshimi 1.5.1 rc5
+
+2017-3-26 Will
+* Corrected anomaly with some float to bool conversions.
+  Changed varable in 'interchange' to make this clearer.
+* Activated Midi_learn for portamento enable & rate.
+* Set master as 1.5.1 rc5
 
 2017-3-22 Will
 * Doc updates and moves ready for release.
