--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -5,7 +5,7 @@ Sort out direct access dynfilter->filter controls work but don't update gui.
 
 Expand midi-learn to include switches, and the controllers window
 
-Make new instance with ID autoselect the next available, then dispense with the other form.
+Make 'New Instance With ID' autoselect the next one available, then dispense with the other form.
 
 Make NRPN midi learn able to be re-learned.
 
