--- a/Changelog
+++ b/Changelog
@@ -2,7 +2,9 @@ yoshimi 1.5.1.1
 
 2017-4-14 Will
 * Revised Gui new instance selection.
-  only 1 menu entry needed now.
+  Only 1 menu entry needed now.
+* Revised Midi-learn min/max - now percentages.
+  Resolution is now 0.5% :)
 
 2017-4-13 Will
 * Revised Cli access to Midi-learn.
