Implemented Gui changes redrawing *after* command set Transferred AddSynthVoice to new control method Updated docs

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.5.1.1
 
+2017-4-17 Will
+* Implemented Gui changes redrawing *after* command set.
+* Transferred AddSynthVoice to new control method.
+* Updated docs.
+
 2017-4-16 Will
 * Part 'kit' is no longer ORed with 32 for some controls
   instead 'insert' is set to 32 for these.
