Fixed regression - scroll wheel had stopped responding More doc updates

--- a/Changelog
+++ b/Changelog
@@ -1,10 +1,12 @@
 yoshimi 1.5.1.1
 
 2017-4-17 Will
-* Implemented Gui changes redrawing *after* command set.
+* Implemented Gui change can redraw *after* command set.
 * Transferred AddSynthVoice to new control method.
 * Updated docs.
 * Transferred SubSynth to new control method.
+* Fixed regression - scroll wheel had stopped responding.
+* More doc updates.
 
 2017-4-16 Will
 * Part 'kit' is no longer ORed with 32 for some controls
