Corrected AddSynth sound/noise display Included AddSynthVoiceList in new controls method

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.1.1
 
+2017-4-18 Will
+* Corrected AddSynth sound/noise display.
+* Included AddSynthVoiceList in new controls method.
+
 2017-4-17 Will
 * Implemented Gui change can redraw *after* command set.
 * Transferred AddSynthVoice to new control method.
