--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.5.1.1
 
+2017-4-28 Will
+* Fixed dynamic tooltip margins at 3 for all FLTK 1.3.x.
+  May reinstate the margin setting at a later date.
+* Small change to crossfade example.
+
 2017-4-23 Will
 * Reverted Midi-learn Gui change again
   It was just moving the problem to any window that was open :(
